--- a/pages/github_banner.html
+++ b/pages/github_banner.html
@@ -71,7 +71,7 @@
 </style>
 
 <div class="container">
-  <img src="https://raw.githubusercontent.com/AlisterBaroi/my-online-resume/main/assets/github_banner.png"
+  <img src="https://github.com/MinDutch03/My_resume/tree/main/assets/github_banner.png"
     alt="GitHub Profile" style="width:100%">
   <p class="p">To see the full list of all my projects, checkout my GitHub profile.</p>
   <!-- <button class="btn" href="https://github.com/MinDutch03">View GitHub &#x279A;</button> -->
